WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146614
[WK2] WebBackForwardListItems' pageState is not kept up-to-date
https://bugs.webkit.org/show_bug.cgi?id=146614
Summary
[WK2] WebBackForwardListItems' pageState is not kept up-to-date
Chris Dumez
Reported
2015-07-04 17:23:57 PDT
WebBackForwardListItems' pageState on UIProcess-side is not kept up-to-date when it is updated on WebContent process side. This means that we lose the scroll position (among other things) when transferring the session state over from one view to another.
Attachments
Patch
(3.31 KB, patch)
2015-07-04 17:31 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-07-04 17:24:22 PDT
rdar://problem/21585268
Chris Dumez
Comment 2
2015-07-04 17:31:40 PDT
Created
attachment 256162
[details]
Patch
WebKit Commit Bot
Comment 3
2015-07-05 01:16:05 PDT
Comment on
attachment 256162
[details]
Patch Clearing flags on attachment: 256162 Committed
r186287
: <
http://trac.webkit.org/changeset/186287
>
WebKit Commit Bot
Comment 4
2015-07-05 01:16:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug