Source/WebCore/loader/HistoryController.cpp
@@ -90,6 +90,9 @@ void HistoryController::saveScrollPositionAndViewStateToItem(HistoryItem* item)
 
     // FIXME: It would be great to work out a way to put this code in WebCore instead of calling through to the client.
     m_frame.loader().client().saveViewStateToItem(item);
+
+    // Notify clients that the HistoryItem has changed.
+    item->notifyChanged();
 }
 
 void HistoryController::clearScrollPositionAndViewState()
